--- a/package.json
+++ b/package.json
@@ -8,11 +8,9 @@
   "author": "",
   "license": "ISC",
   "description": "",
-  "dependencies": {
-    "playwright": "^1.47.2"
-  },
   "devDependencies": {
     "@types/node": "^22.7.4",
+    "playwright": "^1.47.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.2"
   }
