--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
-    "@playwright/test": "^1.47.2",
+    "@playwright/test": "^1.49.0",
     "@types/node": "^22.7.4"
+  },
+  "dependencies": {
+    "playwright": "^1.49.0"
   }
 }
